--- a/vaclav-petras-sotmus-2017.tex
+++ b/vaclav-petras-sotmus-2017.tex
@@ -163,20 +163,32 @@ North Carolina State University
 \end{itemize}
 \end{block}
 
-\begin{block}{Contact}
-\begin{tabular}{rl}
- Homepage: &\href{https://wenzeslaus.github.io}{\texttt{wenzeslaus.github.io}}
- \\
- GitHub: &\texttt{wenzeslaus}
- \\
- Twitter: &\texttt{@vaclavpetras}
-\end{tabular}
-\end{block}
-
 \begin{block}{Disclaimer}
 Speaking for myself, not North Carolina State University.
 \end{block}
 
+
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}{GeoForAll}
+
+% \begin{flushright}
+\hfill initiative by Open Source Geospatial Foundation
+% \end{flushright}
+
+\begin{block}{Mission}
+Making geospatial education and opportunities accessible to all
+\end{block}
+
+\begin{block}{}
+\begin{itemize}
+ \item open data
+ \item open format
+ \item open source software (free software)
+ \item ...
+\end{itemize}
+\end{block}
 
 \end{frame}
 
@@ -201,6 +213,9 @@ Speaking for myself, not North Carolina State University.
   {Matt Asay, InfoWorld, May 28, 2015}%
   {https://www.infoworld.com/article/2927573/open-source-software/red-hat-ceo-heres-how-you-can-foster-an-open-organization.html}
 % In a brand-new book, Red Hat CEO Jim Whitehurst explains what he's learned from leading the largest open source company and how the lessons can be applied
+\\
+{\small (includes collaborative leadership from keynote Christopher J. Loria)}
+% shaving cream versus box with seal and vacuum
 
 \end{block}
 
@@ -255,157 +270,29 @@ Image credit: \href{https://opensource.com/}{Opensource.com}
 
 \newcommand{\coursesTitle}{North Carolina State University}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{\coursesTitle}
-
-\begin{columns}[c]
-
-\column{.55\textwidth}
-
-\begin{block}{\href{http://courses.ncsu.edu/gis582/common/}%
-  {Geospatial Analysis and Modeling}}
-\begin{itemize}
- \item started in 2008
- \item on-campus and distance education
- \item every semester 30-60 students
- \item software:
- \begin{itemize}
-   \item \href{http://grass.osgeo.org}{GRASS GIS}
-   \item ArcGIS
- \end{itemize}
- \item workflow for software provided
- \item students write reports with general theory and methods
-\end{itemize}
-\end{block}
-
-\column{.40\textwidth}
-
-\includegraphics[width=\textwidth]{./images/edu/secref}%
-
-\end{columns}
-
-\bigskip
-
-Listing only geospatial courses where presentation authors are involved.
-
-\end{frame}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{\coursesTitle}
-
-\begin{columns}[c]
-
-\column{.65\textwidth}
-
-\begin{block}{\href{http://courses.ncsu.edu/mea592/common/}%
-  {Multidimensional Geospatial Modeling}}
-
-\begin{itemize}
- \item software:
- \begin{itemize}
-   \item \href{http://grass.osgeo.org}{GRASS GIS}
-   {\scriptsize
-    often with new features such as
-    \href{http://grass.osgeo.org/grass70/manuals/temporalintro.html}{Temporal Framework}
-    (\href{http://grass.osgeo.org/grass7/}{GRASS GIS 7})
-   }
-  \item + whatever the students need, e.g.~%
-    \href{http://oss.deltares.nl/web/xbeach/}{XBeach}, \href{http://www.liblas.org/}{libLAS}
-    or LAStools
- \end{itemize}
-
-%  \item PhD students and highly skilled MS students
-%  \item half of the course led by students% (supported by instructor)
- \item curriculum depends on students projects
- \item new technologies:
-   \href{http://geospatial.ncsu.edu/osgeorel/tangible-landscape.html}%
-   {Tangible Landscape},
-   \href{https://www.lib.ncsu.edu/spaces/teaching-and-visualization-lab}%
-           {NCSU Hunt Lib Teaching and Vis Lab},
-   eye tracking
-
-\end{itemize}
-
-\end{block}
-
-\column{.3\textwidth}
-
-\href{https://www.youtube.com/channel/UCc37pVh-WE46Xkqeq-KZQsA}{%
-\includegraphics[height=0.65\textheight]{./images/edu/tangible}%
-}
-
-\end{columns}
-
-\href{https://www.lib.ncsu.edu/stories/large-scale-visualization-geospatial-data}{%
-\includegraphics[width=\textwidth]{./images/edu/hunt_vis}%
-}
-
-\end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{\coursesTitle}
+\begin{frame}{Teaching enterprise software}
 
-
-\begin{columns}[c]
-
-\column{.65\textwidth}
-
-\begin{block}{\href{http://courses.ncsu.edu/lar582/common/}%
-  {GIS for Designers}}
+\begin{block}{Requirements}
 \begin{itemize}
- \item software in class:
- \begin{itemize}
-  \item ArcGIS
-  \item GRASS GIS
-  \item Rhino (Rhinoceros)
- \end{itemize}
- \item for projects architects and designers combine a lot of tools
- \begin{itemize}
-  \item \href{http://geospatial.ncsu.edu/osgeorel/tangible-landscape.html}{Tangible Landscape}
-    (powered by GRASS GIS) was one of them
- \end{itemize}
-
+ \item Students needs to know enterprise software
+ \item Minimize what students need to learn
 \end{itemize}
-
 \end{block}
 
-\column{.3\textwidth}
+\begin{block}{Result}
+\begin{itemize}
+ \item Students are taught single proprietary software
+\end{itemize}
+\end{block}
 
-\href{https://www.lib.ncsu.edu/stories/re-imagining-lake-raleigh-woods}{%
-\includegraphics[width=\textwidth]{./images/edu/designers}%
-}
-
-\end{columns}
+\centering
+\Large
+enterprise = proprietary?
 
 \end{frame}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{\coursesTitle}
-
-
-\begin{block}{\href{http://ncsu-osgeorel.github.io/uav-lidar-analytics-course/}%
-  {UAV/lidar Data Analytics}}
-\begin{itemize}
- \item under development for this fall semester
- \item Agisoft PhotoScan in class, \href{http://opendronemap.org/}{OpenDroneMap} in projects
-\end{itemize}
-
-Related talk: \href{http://europe.foss4g.org/2015/Program}%
-                 {Flow analysis using sUAS and lidar data (Helena Mitasova)}
-%, Day 3, July 17th, 3:15 PM)
-
-\end{block}
-
-\begin{columns}[c]
-
-\column{.45\textwidth}
-\includegraphics[height=0.5\textheight]{./images/edu/dem}
-\column{.45\textwidth}
-\hspace{0.2\textwidth}
-\rotatebox{-90}{\includegraphics[width=0.5\textheight]{./images/edu/uav}}
-\end{columns}
-
-\end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}{\coursesTitle: Course descriptions}
@@ -485,6 +372,82 @@ Mentions of software in the course description.*
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}{Including open}
+
+\begin{block}{Maybe open is special}
+\begin{itemize}
+ \item Does teaching Python as scripting language of a proprietary
+       software count as teaching open source?
+       \begin{itemize}
+       \item Most programming languages are open source.
+       \end{itemize}
+ \item Does teaching Open Geospatial Consortium (OGC) standards
+       count as including open?
+       \begin{itemize}
+       \item Everybody should use standards.
+       \end{itemize}
+\end{itemize}
+\end{block}
+
+\Large
+\textrightarrow Explicitly including open into class curriculum.
+
+\end{frame}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}{Explicitly mentioning open}
+
+\begin{block}{Maybe open is special}
+\begin{itemize}
+ \item Different business and support models
+ \item Different development goals
+ \item Role of community
+ \item ...
+\end{itemize}
+\end{block}
+
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}{Explicitly mentioning open: Web}
+
+\begin{block}{University of Kentucky: New Maps Plus graduate program}
+\begin{itemize}
+ \item Explicitly mentions open source source software
+ \item Some OpenStreetMap
+ \item Mostly focused on web
+\end{itemize}
+\end{block}
+
+But open versus proprietary is not web versus desktop.
+
+\textrightarrow To cover open, more than web is needed.
+
+\textrightarrow
+(Pure) OpenStreetMap is not replacement
+for proprietary analytical GIS.
+
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}{OpenStreetMap as part of analysis}
+
+\begin{block}{}
+\emph{Towards an Automated Comparison of OpenStreetMap
+with Authoritative Road Datasets.}
+MA Brovelli, M Minghini, ME Molinari, P Mooney
+Transactions in GIS 21 (2), 191-206
+\begin{itemize}
+ \item research by Brovelli et al.
+ \item completeness and spatial accuracy of OpenStreetMap
+ \item using GRASS GIS for analysis
+\end{itemize}
+\end{block}
+
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}{\coursesTitle: New PhD courses}
 
 
@@ -500,11 +463,16 @@ Mentions of software in the course description.*
 
 \end{block}
 
+But open is not part of the vision.
+
+\textrightarrow We need to decide and specify why we are including open.
+
 \end{frame}
 
+\newcommand{\geoforalllab}{NCSU GeoForAll Lab}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{The idea}
+\begin{frame}{\geoforalllab: The idea}
 
 \begin{columns}[c]
 
@@ -539,7 +507,6 @@ Image credit: \href{https://openclipart.org}{Openclipart}
 \end{columns}
 
 \end{frame}
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}{The problem}
@@ -582,42 +549,176 @@ Image credit: \href{https://openclipart.org}{Openclipart}
  \begin{itemize}
   \item relate to given lecture
   \item hands-on, practical
-  \item \alert<1>{students use two different software packages}\pause, in our case:
-  \begin{itemize}
-   \item GRASS GIS (free and open source)
-   \item ArcGIS (proprietary)
-  \end{itemize}
- \end{itemize}
+  \item \alert<1>{students use two different software packages}
   \pause
   \item similar task in both
-%   \item students see two different examples of one workflow
-  \item opportunity to see what is a general concept
+  \end{itemize}
+\pause
+\item opportunity to see what is a general concept
         and what is specific to a~particular software
-%   \item they gain flexibility to choose optimal solutions for their future work
+\item they gain flexibility to choose optimal solutions for their future work
+\item more time needed, but worth it
 \end{itemize}
 
 \end{frame}
 
 
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{Teaching materials}
+\begin{frame}{\geoforalllab: Courses}
+
+\begin{columns}[c]
+
+\column{.55\textwidth}
+
+\begin{block}{\href{http://courses.ncsu.edu/gis582/common/}%
+  {Geospatial Analysis and Modeling}}
+\begin{itemize}
+ \item started in 2008
+ \item on-campus and distance education
+ \item every semester 30-60 students
+ \item software:
+ \begin{itemize}
+   \item \href{http://grass.osgeo.org}{GRASS GIS}
+   \item ArcGIS
+ \end{itemize}
+\end{itemize}
+\end{block}
+
+\column{.40\textwidth}
+
+\includegraphics[width=\textwidth]{./images/edu/secref}%
+
+\end{columns}
+
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}{\geoforalllab: Courses}
+
+\begin{columns}[c]
+
+\column{.65\textwidth}
+
+\begin{block}{\href{http://courses.ncsu.edu/mea592/common/}%
+  {Multidimensional Geospatial Modeling}}
 
 \begin{itemize}
- \item file format
+ \item software:
  \begin{itemize}
-  \item originally HTML
-  \item selecting new one
-  \begin{itemize}
-   \item Markdown, missing general standard
-   \item reStructuredText, hot candidate
-  \end{itemize}
-  \item result: HTML (same as delivery format)
-  \item presentation slides in HTML5 (\href{http://lab.hakim.se/reveal-js}{Reveal.js})
+   \item \href{http://grass.osgeo.org}{GRASS GIS}
+   {\scriptsize
+    often with new features such as
+    \href{http://grass.osgeo.org/grass70/manuals/temporalintro.html}{Temporal Framework}
+    (\href{http://grass.osgeo.org/grass7/}{GRASS GIS 7})
+   }
+  \item + whatever the students need, e.g.~%
+    \href{http://www.liblas.org/}{libLAS}
  \end{itemize}
+
+ \item new technologies:
+   \href{http://geospatial.ncsu.edu/osgeorel/tangible-landscape.html}%
+   {Tangible Landscape}
+
+\end{itemize}
+
+\end{block}
+
+\column{.3\textwidth}
+
+\href{https://www.youtube.com/channel/UCc37pVh-WE46Xkqeq-KZQsA}{%
+\includegraphics[height=0.65\textheight]{./images/edu/tangible}%
+}
+
+\end{columns}
+
+\href{https://www.lib.ncsu.edu/stories/large-scale-visualization-geospatial-data}{%
+\includegraphics[width=\textwidth]{./images/edu/hunt_vis}%
+}
+
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}{Related workshop: Tangible Landscape}
+
+\centering
+\includegraphics[height=0.6\textheight]{./images/tangible/sod_workshop}
+
+\Large
+
+by Anna Petrasova
+Byron North,
+Sun, 9:00am
+
+\end{frame}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}{\geoforalllab: Courses}
+
+
+\begin{block}{\href{http://ncsu-osgeorel.github.io/uav-lidar-analytics-course/}%
+  {UAV/lidar Data Analytics}}
+\begin{itemize}
+ \item under development
+ \item Agisoft PhotoScan in class (proprietary), \href{http://opendronemap.org/}{OpenDroneMap} in projects (open source)
+\end{itemize}
+
+Related talk:
+OpenDroneMap by Dakota Benjamin (Byron North, Sat, 3:35pm)
+
+\end{block}
+
+\begin{columns}[c]
+
+\column{.45\textwidth}
+\includegraphics[height=0.5\textheight]{./images/edu/dem}
+\column{.45\textwidth}
+\hspace{0.2\textwidth}
+\rotatebox{-90}{\includegraphics[width=0.5\textheight]{./images/edu/uav}}
+\end{columns}
+
+\end{frame}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}{\geoforalllab: Courses}
+
+\begin{block}{Tools for open science course}
+
+\begin{itemize}
+ \item Course dedicated to
+ \begin{itemize}
+  \item exploring important role FOSS plays in science
+  \item overview of tools and methods common in FOSS and desperately needed in science
+  \item open source, open access, open data, open standards, open...
+  \item reusability and reproducibility are standard in FOSS
+ \end{itemize}
+\end{itemize}
+
+\end{block}
+
+\smallskip
+
+\centering
+\includegraphics[height=0.4\textheight]{./images/general/open_up_book}%
+\\
+\tiny
+Image credit: \href{https://opensource.com/}{Opensource.com}
+
+\end{frame}
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}{\geoforalllab: Teaching materials}
+
+\begin{itemize}
  \item license: \href{https://creativecommons.org/licenses/by-sa/4.0/}{CC BY-SA}
  \item Git (GitHub hosted)
   {\scriptsize for revision control, collaboration and sharing source code}
  \item registered in \href{http://www.osgeo.org/educational_content}{OSGeo Educational Content Inventory}
+ {\small Now being transfered to a new website}
 \end{itemize}
 
 \href{http://geospatial.ncsu.edu/osgeorel/courses.html}%
@@ -638,39 +739,6 @@ Image credit: \href{https://openclipart.org}{Openclipart}
 
 \end{frame}
 
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{GRASS GIS advantage for teaching materials maintenance}
-
-\begin{itemize}
- \item GRASS GIS workflow recorded as commands.
- \begin{itemize}
- \item Screenshots are hard to update while text is easy to update.
- \item GUI dialog filled according to the command.
- \item Commands can be automatically extracted and tested.
- \end{itemize}
-\end{itemize}
-
-% \bigskip
-% \bigskip
-\begin{center}
-\colorbox{gray!20}{
-\includegraphics[height=0.5\textheight]{./images/edu/grass_cmd_gui}
-}
-\end{center}
-
-
-% \bigskip
-% \bigskip
-
-\scriptsize
-For ArcGIS we also use just text, but, unlike in GRASS GIS,
-the names in dialogs are not part of the API, so they change more often.
-{\tiny(Course running since 2008.)}
-
-\end{frame}
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}{Paper}
 
@@ -683,19 +751,6 @@ Anna Petrasova\n{1,\,4},
 Brendan Harmon\n{2,\,4},
 \mbox{Ross K. Meentemeyer}\n{3,\,4},
 and Helena Mitasova\n{1,\,4}
-
-\medskip
-
-{\tiny
-$^1$Department of Marine, Earth, and Atmospheric Sciences\\
-$^2$Department of Landscape Architecture\\
-$^3$Department of Forestry and Environmental Resources\\
-$^4$\href{http://cnr.ncsu.edu/geospatial/}{Center for Geospatial Analytics}
-and \href{http://geospatial.ncsu.edu/osgeorel/}{NCSU OSGeoREL}
-  -- \href{www.geoforall.org}{part of ICA-OSGeo-ISPRS Network (aka \alert{Geo for All})}\\
-}{\scriptsize
-North Carolina State University, Raleigh, USA\\
-}
 
 \medskip
 
@@ -721,7 +776,27 @@ In: \href{http://www.mdpi.com/journal/ijgi/special_issues/science-applications}%
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}[fragile]{Standardized Sample Datasets}
+\begin{frame}{\geoforalllab: Data -- OpenStreetMap}
+
+\begin{flushright}
+Context: Advanced master and PhD courses
+\end{flushright}
+
+\begin{itemize}
+ \item Students often come with knowledge of OpenStreetMap.
+ \item Often they think it is a name of an ESRI basemap.
+\end{itemize}
+
+Too late to have introduction to geography
+with OpenStreetMap.
+
+Seeking ideas for introducing OpenStreetMap into graduate level courses
+(now: part of student projects).
+
+\end{frame}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}[fragile]{Standardized Sample Datasets for Teaching}
 
 \begin{itemize}
  \item region specific datasets limit sharing of hands-on teaching material
@@ -736,7 +811,7 @@ In: \href{http://www.mdpi.com/journal/ijgi/special_issues/science-applications}%
  \item \alert{different datasets should use the same standardized names}
  \item challenges:
  \begin{itemize}
-  \item attributes, coordinates, values, extents, resolutions
+  \item attributes, coordinates, values, extents, resolutions, (natural) languages
  \end{itemize}
 
 \end{itemize}
@@ -756,7 +831,7 @@ d.shade shade=shade color=elevation
 \end{verbatim}
 \vfill\hfill\hfill
 \href{http://grasswiki.osgeo.org/wiki/GRASS_GIS_Standardized_Sample_Datasets}{%
-$\blacktriangleright$ wiki page}
+$\blacktriangleright$ grasswiki.osgeo.org}
 
 \column{.40\textwidth}
  \includegraphics[width=\textwidth]{./images/dataset/std_dataset_piemonte_shaded_elevation}%
@@ -849,182 +924,57 @@ North Carolina State University, USA}
 \end{frame}
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{Future directions: IPython Notebook}
-
-Used in workshop \emph{How to write a Python GRASS GIS 7 addon}
-\begin{itemize}
- \item \url{https://github.com/wenzeslaus/python-grass-addon}
-\end{itemize}
-
-
-\begin{block}{Solution}
-\begin{itemize}
- \item Docker + GRASS GIS + IPython Notebook
- \item Dockerfile:
- \begin{itemize}
-  \item \url{https://github.com/wenzeslaus/grass-gis-docker}
- \end{itemize}
-\end{itemize}
-\end{block}
-
-\centering
-\begin{minipage}{0.6\textwidth}
-\begin{minipage}[b]{0.45\textwidth}
-\includegraphics[width=\textwidth]{./images/logos/ipython}
-\vspace{0.1\textwidth}
-\includegraphics[width=\textwidth]{./images/logos/docker_dark}
-\end{minipage}
-\includegraphics[width=0.3\textwidth]{./images/logos/grass_gis}
-\end{minipage}
-
-\end{frame}
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{NCSU OSGeoREL workshops and tutorials}
-
-\begin{block}{\href{http://ncsu-osgeorel.github.io/grass-intro-workshop/}%
-  {Introduction to GRASS GIS}}
-  \footnotesize
-  Delivered at NCSU
-\end{block}
-
-\begin{block}{\href{http://ncsu-osgeorel.github.io/grass-temporal-workshop/}%
-  {Spatio-temporal data handling and visualization in GRASS GIS}}
-  \footnotesize
-  FOSS4G 2014 (Portland) workshop, also delivered at NCSU
-\end{block}
-
-
-\begin{block}{\href{http://ncsu-osgeorel.github.io/erosion-modeling-tutorial/}%
-  {Soil erosion and deposition modeling}}
-  \footnotesize
-  Part of a broader project; workflows for GRASS GIS and ArcGIS
-\end{block}
-
-
-\begin{block}{\href{https://github.com/wenzeslaus/python-grass-addon}%
-  {How to write a Python GRASS GIS 7 addon}}
-  \footnotesize
-  FOSS4G Europe 2015 (Como) workshop, also delivered at NCSU
-\end{block}
-
-\bigskip
-% \footnotesize
-\alert{Workshops are a way how to experiment with what to teach and how.}
-
-\end{frame}
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% \begin{frame}{Future directions: Educate educators}
-% 
-% \begin{itemize}
-%   \item instructors involvement in community is more important then students in involvement community
-% \end{itemize}
-% 
-% \end{frame}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{Future directions: Tools for open science course}
-
-\begin{overlayarea}{\textwidth}{\textheight}
+\begin{frame}{Standardized Sample Dataset: Data sources}
 
 \begin{itemize}
- \item Course dedicated to
- \begin{itemize}
-  \item exploring important role FOSS plays in science
-  \item overview of tools and methods common in FOSS and desperately needed in science
-  \item open access, open data, open standards, open...
-  \item reusability and reproducibility are standard in FOSS
- \end{itemize}
-\end{itemize}
-
-\smallskip
-
-\centering
-\includegraphics[height=0.5\textheight]{./images/general/open_up_book}%
-\\
-\tiny
-Image credit: \href{https://opensource.com/}{Opensource.com}
-
-
-\end{overlayarea}
-
-\end{frame}
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{Future directions: Software, technologies and platforms}
-
-\begin{itemize}
- \item \href{http://openstreetmap.org/}{OpenStreetMap},
-    \href{http://teachosm.org}{TeachOSM}, \href{http://learnosm.org}{LearnOSM}
- \begin{itemize}
-  \item for introduction to geography or GIS
-  \item as an example of community-based project
-  \item as data source in advanced courses
- \end{itemize}
- \item \href{http://mapstory.org/}{MapStory} {\scriptsize for student projects}
- \item \href{http://imincik.github.io/gis-lab/}{GIS.lab} {\scriptsize for easy lab setup}
- \item \href{http://jupyter.org/}{IPython/Jupyter},
-    \href{https://github.com/jupyter/jupyterhub}{JupyterHub},
-    \href{https://github.com/jupyter/tmpnb}{tmpnb}
- \item
-    desktop to browser:
-    \href{https://developer.gnome.org/gtk3/stable/gtk-broadway.html}{GTK+ Broadway},
-    \href{https://kanaka.github.io/noVNC/}{noVNC}
-    {\tiny (to get something like \href{https://www.rollapp.com/}{rollApp})}
- \item web-based tool to explore algorithm behavior in teaching materials
- \item link teaching materials, standard user manual and the source code
+ \item buildings, roads, ...: OpenStreetMap
+ \item orthophoto: OpenAerialMap?
+ \item digital elevation model: OpenTopography?
 \end{itemize}
 
 \end{frame}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}{}
 
 \begin{block}{Summary}
  \begin{itemize}
-  \item \href{http://dx.doi.org/10.3390/ijgi4020942}%
-    {improve students' geospatial skills by teaching 2 software packages}
-  \item \href{http://dx.doi.org/10.3390/ijgi4020942}%
-    {use available tools like Git and HTML to create teaching materials}
-  \item \href{http://grasswiki.osgeo.org/wiki/GRASS_GIS_Standardized_Sample_Datasets}%
-    {create a dataset with standardized names for your region}
+  \item teaching 2 software packages to improve students' geospatial skills
+  \item OpenStreetMap as dataset and way of doing things
+  \item GeoForAll (\texttt{geoforall.org})
  \end{itemize}
 
 \end{block}
 
 \bigskip
 
-\centering
-\href{https://github.com/wenzeslaus/foss-in-geospatial-science-education}{%
-\includegraphics[width=0.2\textwidth]{./images/general/slides_qr}\\%
-\texttt{github.com/wenzeslaus/foss-in-geospatial-science-education}%
-}
+\begin{columns}[c]
 
-\end{frame}
+\column{.45\textwidth}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{}
-
-\begin{block}{Advertisement}
-Tangible Landscape Workshop on Sunday, 9am
+\begin{block}{Contact}
+\begin{tabular}{rl}
+ Homepage: &\href{https://wenzeslaus.github.io}{\texttt{wenzeslaus.github.io}}
+ \\
+ GitHub: &\texttt{wenzeslaus}
+ \\
+ Twitter: &\texttt{@vaclavpetras}
+\end{tabular}
 \end{block}
 
-\begin{block}{Acknowledgement}
+\column{.45\textwidth}
+
+\centering
+\includegraphics[width=0.5\textwidth]{./images/general/slides_qr}
+
+\end{columns}
+
+\small
+Acknowledgement:
 Scholarship for State of the Map US 2017
-\end{block}
-
-\bigskip
-
-\centering
-\href{https://github.com/wenzeslaus/foss-in-geospatial-science-education}{%
-\includegraphics[width=0.2\textwidth]{./images/general/slides_qr}\\%
-\texttt{github.com/wenzeslaus/foss-in-geospatial-science-education}%
-}
 
 \end{frame}
 
